Fix alignement for text in boxes

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
   display: flex;
   padding: 32px 24px;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 12px;
   flex: 1 0 0;
   align-self: stretch;
